k8s/apps/adguard/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-home
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Adguard Home
    gethomepage.dev/description: Network-wide software for blocking ads & tracking
    gethomepage.dev/group: Platform
    gethomepage.dev/icon: adguard-home.png
spec:
  ingressClassName: nginx
  rules:
    - host: &host guard.mdeleon.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguard-adguard-home
                port:
                  number: 3000
  tls:
    - secretName: adguard-tls-cert
      hosts:
        - *host
